crates/safessh-tui/tests/snapshots/approvals_snapshot__empty_state.snap
---
source: crates/safessh-tui/tests/approvals_snapshot.rs
assertion_line: 42
expression: render(&s)
---
No pending approvals.
