crates/safessh-tui/tests/snapshots/approvals_snapshot__one_file_read_pending_request.snap
---
source: crates/safessh-tui/tests/approvals_snapshot.rs
expression: render(&s)
---
┌Pending approvals─────────────────────────────────────────────────────────────────────────────────┐
│  TOKEN    PROJECT         BIN        CATEGORIES                                        AGE       │
│> FIL001   prod            file:read  /etc/hosts                                        now       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
