crates/safessh-tui/tests/snapshots/approvals_snapshot__one_pending_request.snap
---
source: crates/safessh-tui/tests/approvals_snapshot.rs
assertion_line: 69
expression: render(&s)
---
┌Pending approvals─────────────────────────────────────────────────────────────────────────────────┐
│  TOKEN    PROJECT         BIN        CATEGORIES                                        AGE       │
│> ABC123   prod            rm         destructive:filesystem                            now       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
